# Retro80

./: .gitignore  CMakeLists.txt  README.md  Retro80.icns
DerivedData/Retro80/: info.plist
QLRetro80/: GeneratePreviewForURL.m  GenerateThumbnailForURL.m  Info.plist  main.c
Retro80/: .gitignore  Apogeo.h  Apogeo.m  Application.h  Application.m  ApplicationDelegate.h  ApplicationDelegate.m  Computer.h  Computer.m  ComputerFactory.h  ComputerFactory.m  Dbg80.h  Dbg80.m  Debug.h  Debug.m  Digit.h  Digit.m  Display.h  Display.m  Document.h  Document.m  DocumentController.h  DocumentController.m  Floppy.h  Floppy.m  GNUmakefile  GNUstep-Prefix.pch  GNUstep-Sound.m  GNUstep-Stub.m  Micro80.h  Micro80.icns  Micro80.m  Micro80Factory.h  Micro80Factory.m  Micro80II.m  Micro80Keyboard.h  Micro80Keyboard.m  Micro80Recorder.h  Micro80Recorder.m  Micro80Screen.h  (+105 more)
Retro80.xcodeproj/: project.pbxproj
Retro80.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Retro80.xcodeproj/project.xcworkspace/xcshareddata/: Retro80.xccheckout
Retro80.xcodeproj/xcuserdata/uart.xcuserdatad/xcschemes/: Retro80.xcscheme  xcschememanagement.plist
Retro80/Base.lproj/: Document.xib  MainMenu.xib
Retro80/ROM/: M3-EXT-1.3.rom  ORDOS-2.40.rom  ORDOS-4.03.rom
Retro80/ru.lproj/: Document.xib  InfoPlist.strings  MainMenu.xib
